# kg-app

./: .gitignore  README.md  app.py  generate_knowledge_graph.py  pyproject.toml  requirements.txt  test_app.py
.github/workflows/: streamlit-app.yml
