[project]
name = "kg-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.35",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "pyvis>=0.3.2",
    "streamlit>=1.50.0",
]
